--- a/appDev/app6K/usecases-grid.html
+++ b/appDev/app6K/usecases-grid.html
@@ -38,30 +38,54 @@
 
 
 <article class="grid demo-markup">
-    <h1>Article layout, <span class="gwrtsch">gwrtsch</span></h1>
-    <p>
-        To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
-    </p>
-    <section bg class="block box text-accent">
+
+    <section chapter>
+
+        <!-- introduction -->
+
+        <h1>Article layout, <span class="gwrtsch">gwrtsch</span></h1>
         <p>
-            Gardening & War section WSJ Ushahidi circulation explainer Article Skimmer privacy Free Darko layoffs Romenesko, writing learnings I love the Weather & Opera section linking the audience knows more than I do discuss mthomps WSJ, CNN leaves it there crowdsourcing Foursquare Jeff Jarvis prostate serendipity #twittermakesyoustupid mathewi API.
+            To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
         </p>
+        <aside class="aside has-block is-sticky">
+            <section class="block">
+                <p>Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.</p>
+                <ul class="block">
+                    <li>Quisque sit amet</li>
+                    <li>Est et sapien</li>
+                    <li>Ullamcorper pharetra</li>
+                </ul>
+            </section>
+        </aside>
+
+        <!-- promo -->
+
+        <section class="block box bg has-text-accent">
+            <p>
+                Gardening & War section WSJ Ushahidi circulation explainer Article Skimmer privacy Free Darko layoffs Romenesko, writing learnings I love the Weather & Opera section linking the audience knows more than I do discuss mthomps WSJ, CNN leaves it there crowdsourcing Foursquare Jeff Jarvis prostate serendipity #twittermakesyoustupid mathewi API.
+            </p>
+        </section>
+
+        <!-- story -->
+
+        <h2>Pellentesque habitant</h2>
+        <p>
+            Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+        </p>
+        <p>
+            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.
+        </p>
+
     </section>
-    <h2>Pellentesque habitant</h2>
-    <p>
-        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
-    </p>
+
+    <!-- usecases -->
+
     <header>
         <h2>Pellentesque habitant</h2>
         <p class="subtitle">Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.</p>
     </header>
-    <aside class="aside has-block">
-        <section class="block">
-            <p>Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.  Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-        </section>
-    </aside>
     <p>
-        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.  Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
+        Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi.
     </p>
     <header>
         <h3>Figure</h3>
@@ -70,6 +94,12 @@
     <p>
         To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
     </p>
+
+    <div dev-box><div dev-pic></div></div>
+    <div class="aside">
+        <div dev-box><div dev-pic></div></div>
+    </div>
+
     <h2>Pellentesque habitant</h2>
     <h3>Vestibulum tortor quam</h3>
     <p>
@@ -79,31 +109,31 @@
     <p>
         To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
     </p>
-    <figure class="block">
-        <div class="illustration demo-markup-illustration">image</div>
-        <figcaption>
+    <figure class="layer grid">
+        <div dev-img class="illustration"></div>
+        <figcaption  class="aside">
             Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
         </figcaption>
     </figure>
 </article>
 
-<div class="demo-introduction">
+<article class="demo-introduction">
     <article class="grid">
         <header>
-            <p>Your casino needs a <a href="/what-is-a-gambling-licence/">license</a> but you don’t know where to start? The procedure is like this: you write a letter to a Curacao master license holder or to the Malta Gaming Authority. <small>You will then be given a list of required documents.</small> They will tell you about charter capital, business plan and profits tax, overwhelm you with numbers, lists, legal niceties and requirements. Bear in mind that it will all be in English. So, you hire a translator, a legal advisor and an accountant, and after a few months, if you do it all right, you will finally obtain a long-awaited license.</p>
+            <p class="gl-textblock">Your casino needs a <a href="/what-is-a-gambling-licence/">license</a> but you don’t know where to start? The procedure is like this: you write a letter to a Curacao master license holder or to the Malta Gaming Authority. <small>You will then be given a list of required documents.</small> They will tell you about charter capital, business plan and profits tax, overwhelm you with numbers, lists, legal niceties and requirements. Bear in mind that it will all be in English. So, you hire a translator, a legal advisor and an accountant, and after a few months, if you do it all right, you will finally obtain a long-awaited license.</p>
         </header>
         <div class="gl-proscons-placement bg"></div>
         <aside class="aside has-block gl-proscons-aside">
             <div class="block box bg gl-proscons-block">
                 <section class="block">
                     <h3 class="min-title">Pros</h3>
-                    <ul class="block">
+                    <ul class="block has-sans-text">
                         <li>You save money because you do everything on your own</li>
                     </ul>
                 </section>
                 <section class="block">
                     <h3 class="min-title">Cons</h3>
-                    <ul class="block">
+                    <ul class="block has-sans-text">
                         <li>You spend a large amount of time</li>
                         <li>There is a big chance of making a mistake. For instance, you may fail to gather all the required documents, and it will cause even more bureaucratic delays</li>
                         <li>You may integrate not all of the payment systems—or integrate ones you do not need</li>
@@ -114,7 +144,7 @@
             </div>
         </aside>
 
-        <p>Does the only advantage outweigh the numerous disadvantages? For some people, yes. However, if you value your time, want to relieve yourself of the troubles that come with licensing and start a casino business in the shortest time possible, let our specialists take care of the process. We offer a full range of services, including:</p>
+        <p class="gl-textblock">Does the only advantage outweigh the numerous disadvantages? For some people, yes. However, if you value your time, want to relieve yourself of the troubles that come with licensing and start a casino business in the shortest time possible, let our specialists take care of the process. We offer a full range of services, including:</p>
         <ul>
             <li>choosing the optimal <a href="/jurisdictions/">jurisdiction</a> for you online casino (<a href="/jurisdictions/curacao/">Curacao</a>, <a href="/jurisdictions/malta/">Malta</a>);</li>
             <li>gathering the required <a href="/gaming-licence-requirements/">documentation</a>;</li>
@@ -140,36 +170,38 @@
         <hr>
         <h2 class="title">Which license is better: Curacao or Maltese?</h2>
         <p>Our clients have different demands, plans and financial capacities, and gambling jurisdictions also have different particularities, so there can be no universal answer. We will look into your needs and recommend you the optimal jurisdiction for your business.</p>
-        <section class="block merge gl-islands-wrap">
-            <h2 class="big-title is-centered">Curacao and Malta gambling licenses specifics</h2>
-            <table class="content-table gl-islands">
-                <tr>
-                    <th class="gl-islands--curacao">Curacao</th>
-                    <th class="gl-islands--malta"  >Malta</th>
-                </tr>
-                <tr>
-                    <td>Annual financial reports</td>
-                    <td>Annual and monthly reports</td>
-                </tr>
-                <tr>
-                    <td>A single income tax at 2%</td>
-                    <td>A fixed annual license fee – €25,000; flexible taxation – 0.40-1.25%</td>
-                </tr>
-                <tr>
-                    <td>Your company will be registered in a special economic zone (E-Zone) and Curacao Chamber of Commerce. One of the chief officers (de jure) must be a resident.</td>
-                    <td>You will have to register as a legal entity in Malta. Chief officers and shareholders may be non-residents.</td>
-                </tr>
-                <tr>
-                    <td>Registration period: 2-3 weeks</td>
-                    <td>Registration period: provisional license is issued in 2-3 weeks, and full license is issued in 6 months.</td>
-                </tr>
-            </table>
+        <section class="block merge is-centered-box gl-islands-wrap">
+            <div class="block">
+                <h2 class="big-title">Curacao and Malta gambling licenses specifics</h2>
+                <table class="content-table gl-islands">
+                    <tr>
+                        <th class="gl-islands--curacao">Curacao</th>
+                        <th class="gl-islands--malta"  >Malta</th>
+                    </tr>
+                    <tr>
+                        <td>Annual financial reports</td>
+                        <td>Annual and monthly reports</td>
+                    </tr>
+                    <tr>
+                        <td>A single income tax at 2%</td>
+                        <td>A fixed annual license fee – €25,000; flexible taxation – 0.40-1.25%</td>
+                    </tr>
+                    <tr>
+                        <td>Your company will be registered in a special economic zone (E-Zone) and Curacao Chamber of Commerce. One of the chief officers (de jure) must be a resident.</td>
+                        <td>You will have to register as a legal entity in Malta. Chief officers and shareholders may be non-residents.</td>
+                    </tr>
+                    <tr>
+                        <td>Registration period: 2-3 weeks</td>
+                        <td>Registration period: provisional license is issued in 2-3 weeks, and full license is issued in 6 months.</td>
+                    </tr>
+                </table>
+            </div>
         </section>
-        <footer class="text-accent">
+        <footer class="has-text-accent">
             <p>By entrusting us with licensing processes, you are guaranteed to have full consulting services of our experts, professional recommendations and, most importantly, a legal business supported by a prestigious license of Curacao or Malta. We have intimate knowledge of legal niceties related to gambling. Therefore, your online casino will be 100% legal which in turn means it will become attractive to players.</p>
         </footer>
     </article>
-</div>
+</article>
 
 </body>
 </html>
