usecase fullscreen, group, form-item

--- a/appDev/app6K/app-seed.html
+++ b/appDev/app6K/app-seed.html
@@ -12,6 +12,8 @@
 
     <!-- ========================================= APP MAIN -->
 
+    <!-- design font -->
+    <link href="https://fonts.googleapis.com/css?family=Vollkorn:400,400i,700&subset=cyrillic" rel="stylesheet">
 
     <link  href="app/style/app.css" rel="stylesheet" type="text/css">
     <script src="app/script/app.js"></script>
@@ -21,13 +23,14 @@
 
 
     <style>
+        
     </style>
 
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
 </head>
-<body class="body-wrap">
+<body class="body-wrap design-template">
 
 
 
