--- a/appDev/app6K/usecases-grid.html
+++ b/appDev/app6K/usecases-grid.html
@@ -94,6 +94,27 @@
     <p>
         To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
     </p>
+    <div class="block group">
+        <p>
+            To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+        </p>
+        <p>
+            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.
+        </p>
+    </div>
+    <div class="block box bg group">
+        <p>
+            To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+        </p>
+        <p>
+            Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.
+        </p>
+    </div>
+    <aside class="aside">
+        <p>
+            To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+        </p>
+    </aside>
 
     <div dev-box><div dev-pic></div></div>
     <div class="aside">
@@ -115,6 +136,17 @@
             Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante.
         </figcaption>
     </figure>
+
+    <section class="left-wrap-in-grid box bg grid">
+        <div class="group">
+            <p>
+                To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+            </p>
+            <p>
+                Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.
+            </p>
+        </div>
+    </section>
 </article>
 
 <article class="demo-introduction">
