Responsive Data Tables

--- a/appDev/app5K/vue-test.html
+++ b/appDev/app5K/vue-test.html
@@ -117,7 +117,28 @@
 <!-- ================================================================= INTRO-->
 
 <article class="sakura-body">
-<h1>Test, <span class="gwrtsch">gwrtsch</span></h1>
+<h1>Демонстрация VUE <span class="gwrtsch">gwrtsch</span></h1>
+<pre class="colors">
+    'black',
+    'grey-darker',
+    'grey-dark',
+    'red-dark',
+    'red',
+    'blue-dark',
+    'blue',
+</pre>
+<p>
+    let vColorMap = new Vue({el:'.colors'});
+</p>
+<script type="text/babel">
+    let vColorMap = new Vue({el:'.colors'});
+</script>
+<p>
+    Спокойный кубик меняет state при загрузке и по клику
+</p>
+<p>
+    To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
+</p>
 <style>
     .gwrtsch {
         display: inline-block;
@@ -141,21 +162,6 @@
         border-top: 0.1em dotted rgba(255,0,0,0.25);
     }
 </style>
-<pre class="colors">
-    'black',
-    'grey-darker',
-    'grey-dark',
-    'red-dark',
-    'red',
-    'blue-dark',
-    'blue',
-</pre>
-<p>
-    To get a better idea, take a look at a sample file written in JavaScript Standard Style. Or, check out one of the <span class="gwrtsch">gwrtsch</span> thousands of projects that use standard!
-</p>
-<script type="text/babel">
-    let vColorMap = new Vue({el:'.colors'});
-</script>
 </article>
 
 <!-- ================================================================= TEST ARTICLE-->
