--- a/appDev/app6K/usecases-hero.html
+++ b/appDev/app6K/usecases-hero.html
@@ -63,7 +63,7 @@
     <h1>Responsive Data Tables <i class="pill bg" id="T01">#T04</i></h1>
 
     <p>
-        break-point: 600px
+        Break-point: 600px
     </p>
 
     <table class="data-table" data-table-type="1str,2num,3txt">
@@ -120,7 +120,7 @@
         </tbody>
     </table>
     <p aside>
-        class="data-table" data-table-type="1str,2num,3txt"
+        class="data-table"<br>data-table-type="1str,2num,3txt"
     </p>
 
     <table class="data-table has-data-titles" data-table-type="1str,2num,3txt">
@@ -270,13 +270,16 @@
 
     <div demo-form class="block box bg">
 
-        <h3>
-            Default form
-            <i class="pill bg" id="T03">#T03</i>
-        </h3>
+        <header>
+            <h3>
+                Default form
+                <i class="pill bg" id="T03">#T03</i>
+            </h3>
+            <p>Minimal form template, please, fill in the form:</p>
+        </header>
+
 
         <!-- minimal form template -->
-        <p>minimal form template, please, fill in the form:</p>
         <form class="block" action="?it-was-form-submit">
             <section class="block">
                 <div class="form-item">
