--- a/appDev/app6K/content-gl-home.html
+++ b/appDev/app6K/content-gl-home.html
@@ -67,13 +67,24 @@
                     <img class="logo_img" src="gl/design/GamingLicensing_compact_logo.svg" alt="GamingLicensing.com">
                 </figure>
                 <nav class="language">
-                    <span class="is-button">English ⚙</span>
+                    <span class="is-button" hidden>English ⚙</span>
                 </nav>
-                <section class="contacts">
-                    <a href="skype:gaminglicensing.com?call" class="is-button has-skype-icon"><span hidden>skype:</span>gaminglicensing.com</a> <a href="mailto:sales@gaminglicensing.com" class="is-button has-email-icon"><span hidden>email:</span>sales@gaminglicensing.com</a>
-                    <a href="/contacts/" class="button has-contact-icon js-header-form-button">Send message</a>
-                </section>
+                <nav class="contact">
+                    <ul class="contact-links">
+                        <li><a href="mailto:sales@gaminglicensing.com" class="is-button has-email-icon"><span hidden>email:</span><span>sales@gaminglicensing.com</span></a></li>
+                        <li><a href="skype:gaminglicensing.com?call" class="is-button has-skype-icon"><span hidden>skype:</span><span>gaminglicensing.com</span></a></li>
+                    </ul>
+                    <div class="contact-trigger js-header-contact-trigger">
+                        <a href="/contacts/" class="button has-contact-icon"><span>send message</span></a>
+                    </div>
+                </nav>
             </section>
+            <div class="xxx">
+                <span class="is-button">English ⚙</span>
+                <style>
+                    .xxx {background-color: #fff;color:black;}
+                </style>
+            </div>
             <!-- / -->
         </header>
 
