--- a/appDev/app6K/try-supergrid.html
+++ b/appDev/app6K/try-supergrid.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- app6011 -->
+<!doctype html><!-- app6011 prj v1 2018.12.29-->
 <html lang="en">
 <head>
     <meta charset="utf-8">
