--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -54,17 +54,19 @@
         </section>
         <section c-prj2>
             <a b href="http://sheep.today/">sheep.today</a>
-            <a href="https://nora-the-sheep.tumblr.com/">Tumblr world pic</a>
+            <a b href="https://dribbble.com/zinovi-lipa">Dribble</a>
+            <a b href="https://nora-the-sheep.tumblr.com/">Tumblr world pic</a>
             <a href="https://login.mailchimp.com/">mailchimp</a>
         </section>
         <section c-tools>
             <a href="http://telegra.ph/" class="red bold"><i>telegra.ph</i></a>
             <a href="https://whimsical.co/N5mPdNPKnDFELwEaCS4Wj">schem-diagram</a>
             <a href="https://www.zoho.eu/docs/"><i>file storage</i></a>
+            <a b href="https://wego.here.com/"><i>City Maps</i></a>
             <figure>
                 <a href="https://www.google.com/maps/place/Berlin,+Germany/@52.5065133,13.1445545,10z/data=!4m5!3m4!1s0x0:0x42120465b5e3b70!8m2!3d52.5200066!4d13.404954!5m1!1e4"><i>G Maps</i></a>
+                <a href="http://www.1188.lv/satiksme/vilcieni/saraksti?from=R%C4%ABga&from-id=2051475&fc=1&to=Gauja&to-id=2051534&tc=1"><i>satiksme</i></a>
             </figure>
-            <a href="http://www.1188.lv/satiksme/vilcieni/saraksti?from=R%C4%ABga&from-id=2051475&fc=1&to=Gauja&to-id=2051534&tc=1"><i>satiksme</i></a>
         </section>
 
 
@@ -72,15 +74,10 @@
         <section c-dev>
             <a href="http://10minutemail.com/" class="bold"><i>10min Mail</i></a>
             <a href="https://glvrd.ru/" class="red"><i>Glavred</i></a>
-            <a href="http://geacron.com/home-en/" class=""><i>History Atlas</i></a>
             <figure>
                 <a href="http://thepiratebay.org/"><i>pirate bay</i></a>
                 <a href="http://tfile.ru/"><i>tfile.ru</i></a>
             </figure>
-        </section>
-        <section c-dev2>
-            <a href="http://radiomap.eu/lv/play/merkurs"><i>♪ Radio Merkurs</i></a>
-            <a href="http://www.diary.ru/~musicbunker/"><i>♪ Folk</i></a>
         </section>
 
 
@@ -118,7 +115,22 @@
             <a href="https://biomolecula.ru/"><i>biomolecula.ru</i></a>
             <a href="https://nplus1.ru/"><i>n+1</i></a>
             <a href="https://golovanov.net/">golovanov.net</a>
+        </section>
+        <section c-eg2>
             <a href="http://gumilevica.kulichki.net/HE2/index.html">Лев Гумилёв: История</a>
+            <a href="http://geacron.com/home-en/" class=""><i>History Atlas</i></a>
+        </section>
+        <section c-eg3>
+            <span a c>Ss ▲▼◄► ‹› ←→ ↔ ‖</span>
+            <span a c>Ss ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂</span>
+            <span a c>
+                <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
+                <span> Māčūļī 💩 ⁐ </span>
+            </span>
+
+            <figure>
+                <span a c>ʕ⊙ᴥ⊙ʔ</span><span a c>༼°▽°༽</span>
+            </figure>
         </section>
     </article>
 
@@ -140,12 +152,15 @@
             <a href="http://langsam.ru/ris/">RIS design blog</a>
             <a href="http://thisisnthappiness.com/archive">thisisnthappiness</a>
             <a href="http://svalko.org/"><i>Свалка</i></a>
-            <a href="https://dribbble.com/"><i>Dribbble</i></a>
         </section>
         <section c-news3>
             <a href="http://lurkmore.ru/%D0%A1%D0%BB%D1%83%D0%B6%D0%B5%D0%B1%D0%BD%D0%B0%D1%8F:Random"><i>lurkmore</i></a>
             <a href="http://arzamas.academy/"><i>arzamas</i></a>
             <a href="http://www.kommersant.ru/rubric/5"><i>Kommersant.ru</i></a>
+        </section>
+        <section c-news1>
+            <a href="http://radiomap.eu/lv/play/merkurs"><i>♪ Radio Merkurs</i></a>
+            <a href="http://www.diary.ru/~musicbunker/"><i>♪ Folk</i></a>
         </section>
     </atricle>
 
@@ -270,21 +285,6 @@
                 <a b href="https://www.photopea.com/"><i>Photopea</i></a>
                 <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour♥</a>
             </figure>
-
-            <section c-dev2>
-
-
-                <span a c>Ss ▲▼◄► ‹› ←→ ↔ ‖</span>
-                <span a c>Ss ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂</span>
-                <span a c>
-                    <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
-                    <span> Māčūļī 💩 ⁐ </span>
-                </span>
-
-                <figure>
-                    <span a c>ʕ⊙ᴥ⊙ʔ</span><span a c>༼°▽°༽</span>
-                </figure>
-            </section>
 
             <section c-dev2>
                 <figure>
